@@ -1,3 +1,9 @@
+zeppplayer (1.6.1.1-1) bookworm jammy kinetic lunar; urgency=medium
+
+  * Fix +1 func
+
+ -- MelianMiko <melianmiko@gmail.com>  Sat, 06 May 2023 17:24:54 +0700
+
 zeppplayer (1.6.1-1) bookworm jammy kinetic lunar; urgency=medium
 
   * Couple of bugfixes
